fix: increase z-index of navigator

--- a/src/components/NavigatorBar/NavigatorBar.module.scss
+++ b/src/components/NavigatorBar/NavigatorBar.module.scss
@@ -25,7 +25,7 @@
   justify-content: space-between;
   position: fixed;
   bottom: 0px;
-  z-index: 2;
+  z-index: 4;
   -webkit-box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.267);
   -moz-box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.267);
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.267);
